refactor(code): 使用 Java 16 的 toList() 替代 Collectors.toList()